# meta-uploader

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  NEW_USER_CHECKLIST.md  POST_STYLE_REFERENCE.md  README.md  SETUP.md  SYSTEM_OVERVIEW.md  WHATSAPP_SETUP.md  instagram_strategy.md  manual_browser_assist.py  pyproject.toml
app/: __init__.py  db.py  (+5 more)
arabic_post_generator/: pyproject.toml
arabic_post_generator/app/: __init__.py  cli.py  config.py  fonts.py  index.html  models.py  renderer.py  review.py  workflow.py
arabic_post_generator/app/static/: style.css
arabic_post_generator/content/duaa/2026-04-10/: first_duaa_beige.json  first_duaa_beige_square.json  meta_api_post_01.json  meta_api_post_02.json  meta_api_post_03.json  meta_api_post_04.json  meta_api_post_05.json  meta_api_post_06.json  meta_api_post_07.json  meta_api_post_08.json  meta_api_post_09.json  meta_api_post_10.json  meta_api_post_11.json  meta_api_post_12.json  meta_api_post_13.json  meta_api_post_14.json  meta_api_post_15.json  meta_api_post_16.json  meta_api_post_17.json  meta_api_post_18.json  meta_api_post_19.json  meta_api_post_20.json  meta_api_post_21.json  meta_api_post_22.json  meta_api_post_23.json  meta_api_post_24.json  meta_api_post_25.json  meta_api_post_26.json  meta_api_post_27.json  meta_api_post_28.json  meta_api_post_29.json  meta_api_post_30.json  meta_api_post_31.json  meta_api_post_32.json  meta_api_post_33.json  meta_api_post_34.json  meta_api_post_35.json  meta_api_post_36.json  meta_api_post_37.json  meta_api_post_38.json  (+14 more)
arabic_post_generator/tests/: test_basic.py
(+21 files in other folders)
